force-app/main/default/objects/os_CIF__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <color>#FFFFFF</color>
                <label>New</label>
            </value>
            <value>
                <fullName>Details Verified</fullName>
                <color>#FFFFFF</color>
                <label>Details Verified</label>
            </value>
            <value>
                <fullName>Qualified</fullName>
                <color>#FFFFFF</color>
                <label>Qualified</label>
            </value>
            <value>
                <fullName>Disqualified</fullName>
                <color>#FFFFFF</color>
                <label>Disqualified</label>
            </value>
            <value>
                <fullName>Duplicate</fullName>
                <color>#FFFFFF</color>
                <label>Duplicate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>