force-app/main/default/objects/os_CIF__c/fields/Third_Party_Agency_Client__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Agency_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Party Agency Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CIF (.Third_Party_Agency_Client)</relationshipLabel>
    <relationshipName>Third_Party_Agency_Client</relationshipName>
    <type>Lookup</type>
</CustomField>