force-app/main/default/objects/os_CIF__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>OS_Property__c</referenceTo>
    <relationshipLabel>CIF (.Unit)</relationshipLabel>
    <relationshipName>Unit</relationshipName>
    <type>Lookup</type>
</CustomField>