force-app/main/default/objects/os_CIF__c/fields/UnitType__c.field-meta.xml
<CustomField>
    <fullName>UnitType__c</fullName>
    <label>UnitType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 BR</fullName>
                <color>#FFFFFF</color>
                <label>1 BR</label>
            </value>
            <value>
                <fullName>2BR</fullName>
                <color>#FFFFFF</color>
                <label>2BR</label>
            </value>
            <value>
                <fullName>3BR</fullName>
                <color>#FFFFFF</color>
                <label>3BR</label>
            </value>
            <value>
                <fullName>4BR</fullName>
                <color>#FFFFFF</color>
                <label>4BR</label>
            </value>
            <value>
                <fullName>5BR</fullName>
                <color>#FFFFFF</color>
                <label>5BR</label>
            </value>
            <value>
                <fullName>6BR</fullName>
                <color>#FFFFFF</color>
                <label>6BR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>