force-app/main/default/objects/os_CIF__c/fields/User_Generated_CIF__c.field-meta.xml
<CustomField>
    <fullName>User_Generated_CIF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Generated CIF</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>CIF (.User_Generated_)</relationshipLabel>
    <relationshipName>User_Generated_CIF</relationshipName>
    <type>Lookup</type>
</CustomField>