force-app/main/default/objects/os_CIF__c/fields/X3rd_Party_Agency__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3rd Party Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CIF (.X3rd_Party_Agency)</relationshipLabel>
    <relationshipName>X3rd_Party_Agency</relationshipName>
    <type>Lookup</type>
</CustomField>