force-app/main/default/objects/os_CIF__c/fields/X3rd_Party_Agency_Mobile__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Agency_Mobile__c</fullName>
    <label>3rd Party Agency Mobile</label>
    <type>Phone</type>
</CustomField>