force-app/main/default/objects/os_CIF__c/fields/X3rd_Party_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Agency_Name__c</fullName>
    <label>3rd Party Agency Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>