force-app/main/default/objects/os_CIF__c/fields/X3rd_Party_Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Agent_Email__c</fullName>
    <label>3rd Party Agent Email</label>
    <type>Email</type>
</CustomField>