force-app/main/default/objects/os_CIF__c/fields/X3rd_Party_Agent_Number__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Agent_Number__c</fullName>
    <label>3rd Party Agent Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>